# vilnius-demo-soniox

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  livekit.toml  pyproject.toml
knowledge/: faqs.py  kb.py
sioniox/: tts.py
soniox_tts/: __init__.py  tts.py
tests/: conftest.py  test_conversational_depth.py  test_faq_behavioral.py  test_observability.py  test_production_hardening.py  test_smoke.py  test_softer_tone.py  test_ux_feedback.py
